--- a/src/components/style.css
+++ b/src/components/style.css
@@ -58,12 +58,18 @@
   border-radius: 5px;
   padding: 20px;
   margin-top: 15px;
-  background-color: white;
+  background-color: yellow;
 }
 
 .todos__single--text {
   flex: 1;
   padding: 5px;
+  border: none;
+  font-size: 20px;
+}
+
+.todos__single--text:focus {
+  outline: none;
 }
 
 .icon {
